# ml-model-serving-platform

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  model-test.yml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: AB_TESTING_GUIDE.md  ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md  MONITORING_GUIDE.md
grafana/dashboards/: model_serving.json
ml_serving/api/: __init__.py  main.py  middleware.py  schemas.py
ml_serving/api/routes/: experiments.py  health.py  models.py  monitoring.py  predict.py
ml_serving/config/: settings.py
ml_serving/deployment/: __init__.py  cloud_run.py  docker_deploy.py  rollback.py
ml_serving/monitoring/: __init__.py  alerting.py  drift_detector.py  metrics.py
ml_serving/registry/: model_registry.py  model_store.py  schemas.py
ml_serving/routing/: __init__.py  ab_testing.py  canary.py  shadow.py
ml_serving/serving/: batching.py  model_server.py  predictor.py  preprocessor.py
models/sample/: train_sample_models.py
scripts/: deploy.py
tests/integration/: test_ab_testing.py  test_api.py  test_pipeline.py
tests/unit/: test_batching.py  test_deployment.py  test_monitoring.py  test_registry.py  test_rollback.py  test_routing.py  test_serving.py
