[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-model-serving-platform"
version = "0.1.0"
description = "Production MLOps platform for serving ML models with A/B testing, drift detection, and monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ML Platform Team" }]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.25.0",
    "pandas>=2.1.0",
    "prometheus-client>=0.19.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "joblib>=1.3.0",
    "boto3>=1.29.0",
    "google-cloud-storage>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ml_serving"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
